# Unitree-z1-with-haptic-touch-x

./: README  README.md  move_group_interface.cpp
getdata_package/: CMakeLists.txt  package.xml
getdata_package/src/: getdata_node.py
tcpip_package/: CMakeLists.txt  package.xml
tcpip_package/src/: tcpip_node.py
torque_package/: CMakeLists.txt  package.xml
torque_package/src/: torque_node.py
z1_examples/: CMakeLists.txt
z1_examples/examples/: move_group_interface_home.cpp  move_group_interface_tcp.cpp  torque.cpp
z1_examples/scripts/: get_torque.py  torque_test.py
